Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/IncompleteMessageOverride.out
IncompleteMessageOverride.java:15:25: compiler.err.override.weaker.access: (compiler.misc.cant.override: m(), Sub, m(), Super), package
1 error
